--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jbehave.web</groupId>
   <artifactId>jbehave-web</artifactId>
-  <version>2.2-SNAPSHOT</version>
+  <version>3.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>JBehave Web</name>
   <description>JBehave Web aims to provide a web integration layer for Behaviour-Driven Development</description>
@@ -16,7 +16,7 @@
   </modules>
 
   <properties>
-    <jbehave.version>2.6-SNAPSHOT</jbehave.version>
+    <jbehave.version>2.5.1</jbehave.version>
     <jbehave.webapp.name>jbehave-web-runner</jbehave.webapp.name>
   </properties>
 
