--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   </modules>
 
   <properties>
-    <jbehave.version>3.0-SNAPSHOT</jbehave.version>
+    <jbehave.version>3.0-beta-2</jbehave.version>
     <jbehave.webapp.name>jbehave-web-runner</jbehave.webapp.name>
   </properties>
 
