--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.0.2</version>
+          <version>2.1</version>
           <configuration>
             <source>1.5</source>
             <target>1.5</target>
@@ -106,7 +106,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
-          <version>2.0</version>
+          <version>2.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -124,7 +124,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.4.3</version>
+          <version>2.5</version>
           <configuration>
             <junitArtifactName>junit:junit</junitArtifactName>
             <forkMode>once</forkMode>
@@ -141,7 +141,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-report-plugin</artifactId>
-          <version>2.4</version>
+          <version>2.5</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -179,7 +179,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>2.3</version>
+          <version>2.4</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -189,7 +189,6 @@
             <autoVersionSubmodules>true</autoVersionSubmodules>
             <preparationGoals>clean install</preparationGoals>
             <goals>deploy</goals>
-            <tagBase>https://svn.codehaus.org/jbehave/tags</tagBase>
           </configuration>
         </plugin>
         <plugin>
@@ -200,12 +199,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
-          <version>2.0</version>
+          <version>2.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-antrun-plugin</artifactId>
-          <version>1.2</version>
+          <version>1.3</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -365,7 +364,7 @@
   <licenses>
     <license>
       <name>BSD license</name>
-      <url>https://svn.codehaus.org/jbehave/trunk/LICENSE.txt</url>
+      <url>http://git.codehaus.org/gitweb.cgi?p=jbehave-git.git;a=blob_plain;f=trunk/core/LICENSE.txt;hb=HEAD</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -374,9 +373,9 @@
   <contributors />
 
   <scm>
-    <connection>scm:svn:https://svn.codehaus.org/jbehave/trunk/web</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/jbehave/trunk/web</developerConnection>
-    <url>http://svn.codehaus.org/jbehave/trunk/web</url>
+    <connection>scm:git:git://git.codehaus.org/jbehave-git.git</connection>
+    <developerConnection>scm:git:ssh://git@git.codehaus.org/jbehave-git.git</developerConnection>
+    <url>http://git.codehaus.org/gitweb.cgi?p=jbehave-git.git</url>
   </scm>
 
   <distributionManagement>
