Fixed SCM urls.

--- a/pom.xml
+++ b/pom.xml
@@ -363,7 +363,7 @@
   <licenses>
     <license>
       <name>BSD license</name>
-      <url>http://git.codehaus.org/gitweb.cgi?p=jbehave-git.git;a=blob_plain;f=trunk/core/LICENSE.txt;hb=HEAD</url>
+      <url>http://git.codehaus.org/gitweb.cgi?p=jbehave-git.git;a=blob_plain;f=LICENSE.txt;hb=HEAD</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -372,9 +372,9 @@
   <contributors />
 
   <scm>
-    <connection>scm:git:git://git.codehaus.org/jbehave-git.git</connection>
-    <developerConnection>scm:git:ssh://git@git.codehaus.org/jbehave-git.git</developerConnection>
-    <url>http://git.codehaus.org/gitweb.cgi?p=jbehave-git.git</url>
+    <connection>scm:git:git://git.codehaus.org/jbehave-web.git</connection>
+    <developerConnection>scm:git:ssh://git@git.codehaus.org/jbehave-web.git</developerConnection>
+    <url>http://git.codehaus.org/gitweb.cgi?p=jbehave-web.git</url>
   </scm>
 
   <distributionManagement>
