--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   </modules>
 
   <properties>
-    <jbehave.core.version>3.0-beta-3</jbehave.core.version>
+    <jbehave.core.version>3.0-SNAPSHOT</jbehave.core.version>
     <jbehave.webapp.name>jbehave-web-runner</jbehave.webapp.name>
   </properties>
 
