--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.jbehave</groupId>
+    <artifactId>jbehave</artifactId>
+    <version>3.0-SNAPSHOT</version>
+  </parent>
   <groupId>org.jbehave.web</groupId>
   <artifactId>jbehave-web</artifactId>
   <version>3.0-SNAPSHOT</version>
@@ -15,7 +20,7 @@
   </modules>
 
   <properties>
-    <jbehave.core.version>3.0-beta-11</jbehave.core.version>
+    <jbehave.core.version>3.0-SNAPSHOT</jbehave.core.version>
     <jbehave.webapp.name>jbehave-web-runner</jbehave.webapp.name>
   </properties>
 
@@ -328,36 +333,6 @@
         </plugins>
       </reporting>
     </profile>
-    <profile>
-      <!--
-        This profile belongs in ~/.m2/settings.xml but Bamboo does not
-        have an obvious place to configure a settings.xml So adding it
-        to POM temporarily to get build to pass with snapshot.
-      -->
-      <id>codehaus</id>
-      <repositories>
-        <repository>
-          <id>codehaus-releases</id>
-          <url>http://repository.codehaus.org</url>
-          <snapshots>
-            <enabled>false</enabled>
-          </snapshots>
-          <releases>
-            <enabled>true</enabled>
-          </releases>
-        </repository>
-        <repository>
-          <id>codehaus-snapshots</id>
-          <url>http://snapshots.repository.codehaus.org</url>
-          <snapshots>
-            <enabled>true</enabled>
-          </snapshots>
-          <releases>
-            <enabled>false</enabled>
-          </releases>
-        </repository>
-      </repositories>
-    </profile>
   </profiles>
 
   <licenses>
@@ -377,20 +352,5 @@
     <url>http://git.codehaus.org/gitweb.cgi?p=jbehave-web.git</url>
   </scm>
 
-  <distributionManagement>
-    <!--
-      The id used must match a server id defined in ~/.m2/settings.xml
-    -->
-    <repository>
-      <id>codehaus.org</id>
-      <name>Codehaus JBehave Repository</name>
-      <url>dav:https://dav.codehaus.org/repository/jbehave/</url>
-    </repository>
-    <snapshotRepository>
-      <id>codehaus.org</id>
-      <name>Codehaus JBehave Snapshot Repository</name>
-      <url>dav:https://dav.codehaus.org/snapshots.repository/jbehave/</url>
-    </snapshotRepository>
-  </distributionManagement>
 </project>
 
