JBEHAVE-321:  Upgraded to jbehave-site 3.0 release.

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -9,7 +9,7 @@
   <packaging>pom</packaging>
   <name>JBehave Web Distribution</name>
   <properties>
-      <jbehave.site.version>3.0-SNAPSHOT</jbehave.site.version>
+      <jbehave.site.version>3.0</jbehave.site.version>
   </properties>
   <dependencies>
     <dependency>
