--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>org.jbehave</groupId>
       <artifactId>jbehave-pico</artifactId>
-      <version>${.version}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jbehave.web</groupId>
