--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
   </dependencies>
 
   <properties>
-    <jbehave.core.version>3.0-rc3</jbehave.core.version>
+    <jbehave.core.version>3.0</jbehave.core.version>
     <jbehave.webapp.name>jbehave-web-runner</jbehave.webapp.name>
   </properties>
 
