--- a/examples/trader-runner-stories/pom.xml
+++ b/examples/trader-runner-stories/pom.xml
@@ -10,7 +10,9 @@
   <artifactId>jbehave-web-trader-stories</artifactId>
   <name>JBehave Web Trader Stories</name>
   <packaging>jar</packaging>
-
+  <properties>
+    <jbehave.webapp.name>trader-runner</jbehave.webapp.name>
+  </properties>
   <build>
     <plugins>
       <plugin>
@@ -40,28 +42,13 @@
       </plugin>
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
-        <artifactId>maven-jetty-plugin</artifactId>
-        <version>6.1.14</version>
-        <dependencies>
-          <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-servlet_2.5_spec</artifactId>
-            <version>1.2</version>
-          </dependency>
-        </dependencies>
+        <artifactId>jetty-maven-plugin</artifactId>
         <configuration>
           <webApp>${project.build.directory}/jbehave-trader-webapp.war</webApp>
           <webAppConfig>
             <contextPath>/trader-runner</contextPath>
           </webAppConfig>
-          <connectors>
-            <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-              <port>8080</port>
-              <maxIdleTime>3600000</maxIdleTime>
-            </connector>
-          </connectors>
-          <scanIntervalSeconds>5</scanIntervalSeconds>
-        </configuration>
+        </configuration>        
         <executions>
           <execution>
             <id>start-jetty</id>
