--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.codehaus</groupId>
@@ -18,6 +20,12 @@
     <module>web-selenium</module>
     <module>web-runner</module>
   </modules>
+
+  <properties>
+    <jbehave.core.version>3.0</jbehave.core.version>
+    <jbehave.webapp.name>jbehave-web-runner</jbehave.webapp.name>
+    <jetty.version>7.1.6.v20100715</jetty.version>
+  </properties>
 
   <dependencyManagement>
     <dependencies>
@@ -41,11 +49,6 @@
       <artifactId>mockito-all</artifactId>
     </dependency>
   </dependencies>
-
-  <properties>
-    <jbehave.core.version>3.0</jbehave.core.version>
-    <jbehave.webapp.name>jbehave-web-runner</jbehave.webapp.name>
-  </properties>
 
   <build>
     <resources>
@@ -124,14 +127,28 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
-          <version>2.0.2</version>
+          <version>2.1</version>
           <configuration>
             <warName>${jbehave.webapp.name}</warName>
-            <webResources>
-              <resource>
-                <directory>${project.build.directory}/resources</directory>
-              </resource>
-            </webResources>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.mortbay.jetty</groupId>
+          <artifactId>jetty-maven-plugin</artifactId>
+          <version>${jetty.version}</version>
+          <configuration>
+            <webAppConfig>
+              <contextPath>/${jbehave.webapp.name}</contextPath>
+            </webAppConfig>
+            <webApp>${project.build.directory}/${jbehave.webapp.name}.war</webApp>
+            <connectors>
+              <connector
+                implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+                <port>8080</port>
+                <maxIdleTime>60000</maxIdleTime>
+              </connector>
+            </connectors>
+            <scanIntervalSeconds>5</scanIntervalSeconds>
           </configuration>
         </plugin>
         <plugin>
@@ -143,12 +160,12 @@
             <forkMode>once</forkMode>
             <printSummary>true</printSummary>
             <useFile>true</useFile>
-            <systemProperties>
+            <systemPropertyVariables>
               <property>
                 <name>java.awt.headless</name>
                 <value>true</value>
               </property>
-            </systemProperties>
+            </systemPropertyVariables>
           </configuration>
         </plugin>
         <plugin>
@@ -246,28 +263,6 @@
           <artifactId>xsite-maven-plugin</artifactId>
           <version>1.0</version>
         </plugin>
-        <plugin>
-          <groupId>org.mortbay.jetty</groupId>
-          <artifactId>maven-jetty-plugin</artifactId>
-          <version>6.1.14</version>
-          <dependencies>
-            <dependency>
-              <groupId>org.apache.geronimo.specs</groupId>
-              <artifactId>geronimo-servlet_2.5_spec</artifactId>
-              <version>1.2</version>
-            </dependency>
-          </dependencies>
-          <configuration>
-            <contextPath>/${jbehave.webapp.name}</contextPath>
-            <webApp>${project.build.directory}/${jbehave.webapp.name}.war</webApp>
-            <connectors>
-              <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-                <port>8080</port>
-                <maxIdleTime>3600000</maxIdleTime>
-              </connector>
-            </connectors>
-          </configuration>
-        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
@@ -362,4 +357,3 @@
   </scm>
 
 </project>
-
