--- a/web-runner/pom.xml
+++ b/web-runner/pom.xml
@@ -14,7 +14,7 @@
     <packaging>jar</packaging>
     <wicket.version>1.4.10</wicket.version>
   </properties>
-  
+
   <dependencies>
     <dependency>
       <groupId>org.jbehave.web</groupId>
@@ -34,6 +34,11 @@
     <dependency>
       <groupId>org.apache.wicket</groupId>
       <artifactId>wicket-guice</artifactId>
+      <version>${wicket.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.wicket</groupId>
+      <artifactId>wicket-velocity</artifactId>
       <version>${wicket.version}</version>
     </dependency>
     <dependency>
@@ -148,6 +153,12 @@
           <plugin>
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>jetty-maven-plugin</artifactId>
+            <configuration>
+              <webAppConfig>
+                <contextPath>/${jbehave.webapp.name}</contextPath>
+              </webAppConfig>
+              <webApp>${project.build.directory}/${jbehave.webapp.name}.war</webApp>              
+            </configuration>
           </plugin>
         </plugins>
       </build>
