--- a/examples/trader-runner/src/main/webapp/WEB-INF/web.xml
+++ b/examples/trader-runner/src/main/webapp/WEB-INF/web.xml
@@ -5,20 +5,19 @@
   version="2.5">
 
   <display-name>JBehave Web Runner</display-name>
-  <filter>
-    <filter-name>application</filter-name>
-    <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
+
+  <servlet>
+    <servlet-name>wicket</servlet-name>
+    <servlet-class>org.apache.wicket.protocol.http.WicketServlet</servlet-class>
     <init-param>
       <param-name>applicationClassName</param-name>
       <param-value>org.jbehave.web.examples.trader.runner.TraderRunnerApplication</param-value>
     </init-param>
-  </filter>
+  </servlet>
 
-  <filter-mapping>
-    <filter-name>application</filter-name>
+  <servlet-mapping>
+    <servlet-name>wicket</servlet-name>
     <url-pattern>/*</url-pattern>
-    <dispatcher>REQUEST</dispatcher>
-    <dispatcher>INCLUDE</dispatcher>
-  </filter-mapping>
+  </servlet-mapping>
 
 </web-app>
