--- a/web-runner/src/main/webapp/WEB-INF/web.xml
+++ b/web-runner/src/main/webapp/WEB-INF/web.xml
@@ -5,21 +5,18 @@
   version="2.5">
 
   <display-name>JBehave Web Runner</display-name>
+  
   <filter>
-    <filter-name>application</filter-name>
+    <filter-name>wicket</filter-name>
     <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
     <init-param>
       <param-name>applicationClassName</param-name>
       <param-value>org.jbehave.web.runner.wicket.WebRunnerApplication</param-value>
     </init-param>
-    <init-param>
-      <param-name>debug</param-name>
-      <param-value>1</param-value>
-    </init-param>
   </filter>
 
   <filter-mapping>
-    <filter-name>application</filter-name>
+    <filter-name>wicket</filter-name>
     <url-pattern>/*</url-pattern>
     <dispatcher>REQUEST</dispatcher>
     <dispatcher>INCLUDE</dispatcher>
