--- a/web-runner/src/main/webapp/WEB-INF/web.xml
+++ b/web-runner/src/main/webapp/WEB-INF/web.xml
@@ -5,13 +5,18 @@
   version="2.5">
 
   <display-name>JBehave Web Runner</display-name>
-  
+
   <filter>
     <filter-name>wicket</filter-name>
     <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
     <init-param>
       <param-name>applicationClassName</param-name>
       <param-value>org.jbehave.web.runner.wicket.WebRunnerApplication</param-value>
+    </init-param>
+    <init-param>
+      <!-- Use system property "wicket.configuration" to override to "development" when needed -->
+      <param-name>configuration</param-name>
+      <param-value>deployment</param-value>
     </init-param>
   </filter>
 
