--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -11,9 +11,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.seleniumhq.selenium.client-drivers</groupId>
-      <artifactId>selenium-java-client-driver</artifactId>
-      <version>1.0.2</version>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium</artifactId>
+      <version>2.0a5</version>
     </dependency>
   </dependencies>
 </project>
