--- a/examples/trader-runner-stories/pom.xml
+++ b/examples/trader-runner-stories/pom.xml
@@ -9,6 +9,7 @@
   </parent>
   <artifactId>jbehave-web-trader-stories</artifactId>
   <name>JBehave Web Trader Stories</name>
+  <description>Uses JBehaveWeb-Selenium of the  JBehaveWeb that is running as part of the the sibling jbehave-trader project.</description>
   <packaging>jar</packaging>
   <properties>
     <jbehave.webapp.name>trader-runner</jbehave.webapp.name>
