JBEHAVE-345: merging seleium and webdriver modules as per Mauro's request

--- a/examples/trader-runner-webdriver/pom.xml
+++ b/examples/trader-runner-webdriver/pom.xml
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
           <groupId>org.jbehave.web</groupId>
-          <artifactId>jbehave-web-webdriver</artifactId>
+          <artifactId>jbehave-web-selenium</artifactId>
           <version>${project.version}</version>
         </dependency>        
     </dependencies>
