--- a/distribution/src/main/bin/deploy.properties
+++ b/distribution/src/main/bin/deploy.properties
@@ -6,7 +6,7 @@ build.dir=target
 deploy.dir=${env.JETTY_HOME}/webapps
 lib.dir=../lib
 webapp.dir=../webapp
-webapp.name=jbehave-web
+webapp.name=jbehave-web-runner
 webapp.war=${build.dir}/${webapp.name}.war
 webapp.unpacked=${build.dir}/webapp
 webapp.deployed.packed=${deploy.dir}/${webapp.name}.war
