--- a/web-runner/pom.xml
+++ b/web-runner/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jbehave.web</groupId>
     <artifactId>jbehave-web</artifactId>
-    <version>3.2-SNAPSHOT</version>
+    <version>3.2-beta-4</version>
   </parent>
   <artifactId>jbehave-web-runner</artifactId>
   <packaging>${packaging}</packaging>
