--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -13,12 +13,12 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium</artifactId>
-      <version>2.0a7</version>
+      <version>2.0b1</version>
     </dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-android-client</artifactId>
-      <version>2.0a7</version>
+      <version>2.0b1</version>
       <optional>true</optional>
     </dependency>
   </dependencies>
