--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -15,6 +15,11 @@
       <artifactId>selenium-remote-control</artifactId>
       <version>2.0b2</version>
     </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-support</artifactId>
+      <version>2.0b2</version>
+    </dependency>
     <!--dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-android-client</artifactId>
