--- a/web-resources/pom.xml
+++ b/web-resources/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jbehave.web</groupId>
     <artifactId>jbehave-web</artifactId>
-    <version>3.3-SNAPSHOT</version>
+    <version>3.3-beta-1</version>
   </parent>
   <artifactId>jbehave-web-resources</artifactId>
   <packaging>jar</packaging>
