--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
     </dependency>
+   <dependency>
+	  <!-- hack to overcome http://jira.codehaus.org/browse/MSITE-228 -->
+      <groupId>org.apache.maven.skins</groupId>
+      <artifactId>maven-default-skin</artifactId>
+      <version>1.0</version>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
   <build>
