--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -3,9 +3,10 @@
   <parent>
     <groupId>org.jbehave.web</groupId>
     <artifactId>jbehave-web</artifactId>
-    <version>3.3-beta-2</version>
+    <version>3.3-SNAPSHOT</version>
   </parent>
   <artifactId>jbehave-web-distribution</artifactId>
+  <version>3.3-beta-2</version>
   <packaging>pom</packaging>
   <name>JBehave Web Distribution</name>
   <properties>
