--- a/web-io/pom.xml
+++ b/web-io/pom.xml
@@ -3,9 +3,10 @@
   <parent>
     <groupId>org.jbehave.web</groupId>
     <artifactId>jbehave-web</artifactId>
-    <version>3.3-beta-2</version>
+    <version>3.3-SNAPSHOT</version>
   </parent>
   <artifactId>jbehave-web-io</artifactId>
+  <version>3.3-beta-2</version>
   <packaging>jar</packaging>
   <name>JBehave Web I/O</name>
 
