--- a/web-runner/pom.xml
+++ b/web-runner/pom.xml
@@ -3,9 +3,10 @@
   <parent>
     <groupId>org.jbehave.web</groupId>
     <artifactId>jbehave-web</artifactId>
-    <version>3.3-beta-2</version>
+    <version>3.3-SNAPSHOT</version>
   </parent>
   <artifactId>jbehave-web-runner</artifactId>
+  <version>3.3-beta-2</version>
   <packaging>${packaging}</packaging>
   <name>JBehave Web Runner</name>
 
