--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -3,9 +3,10 @@
   <parent>
     <groupId>org.jbehave.web</groupId>
     <artifactId>jbehave-web</artifactId>
-    <version>3.3-beta-2</version>
+    <version>3.3-SNAPSHOT</version>
   </parent>
   <artifactId>jbehave-web-selenium</artifactId>
+  <version>3.3-beta-2</version>
   <packaging>jar</packaging>
   <name>JBehave Web Selenium</name>
   <description>Selenium and WebDriver API bindings for JBehave</description>
