--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,13 @@
     <module>web-resources</module>
     <module>web-selenium</module>
     <module>web-runner</module>
+    <module>web-listener</module>
   </modules>
 
   <properties>
     <jbehave.core.version>3.3-SNAPSHOT</jbehave.core.version>
     <jbehave.webapp.name>jbehave-web-runner</jbehave.webapp.name>
-    <jetty.version>7.3.1.v20110307</jetty.version>
+    <jetty.version>7.2.2.v20101205</jetty.version>
   </properties>
 
   <dependencyManagement>
