--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <module>web-resources</module>
     <module>web-selenium</module>
     <module>web-runner</module>
-    <module>web-listener</module>
+    <module>web-queue</module>
   </modules>
 
   <properties>
