--- a/web-runner/pom.xml
+++ b/web-runner/pom.xml
@@ -12,6 +12,7 @@
   <properties>
     <packaging>jar</packaging>
     <wicket.version>1.4.16</wicket.version>
+    <guice.version>3.0</guice.version>
   </properties>
 
   <dependencies>
@@ -34,6 +35,17 @@
       <groupId>org.apache.wicket</groupId>
       <artifactId>wicket-guice</artifactId>
       <version>${wicket.version}</version>
+        <exclusions>
+            <exclusion>
+                <groupId>com.google.inject</groupId>
+                <artifactId>guice</artifactId>
+            </exclusion>
+        </exclusions>
+    </dependency>
+    <dependency>
+        <groupId>com.google.inject</groupId>
+        <artifactId>guice</artifactId>
+        <version>${guice.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.wicket</groupId>
