--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -20,11 +20,15 @@
       <artifactId>selenium-support</artifactId>
       <version>2.0b3</version>
     </dependency>
-    <!--dependency>
+    <!-- Note: 2.0b1 is the latest release of selenium-android-client in Maven Central
+         As it's optional it will not be included in the transitive dependencies
+         Users are encouraged to use the latest release available
+     -->
+    <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-android-client</artifactId>
-      <version>2.0b2</version>
+      <version>2.0b1</version>
       <optional>true</optional>
-    </dependency-->
+    </dependency>
   </dependencies>
 </project>
