--- a/examples/trader-runner-webdriver/pom.xml
+++ b/examples/trader-runner-webdriver/pom.xml
@@ -20,6 +20,19 @@
       <artifactId>jbehave-web-selenium</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.jbehave</groupId>
+      <artifactId>jbehave-core</artifactId>
+      <version>${jbehave.core.version}</version>
+      <classifier>resources</classifier>
+      <type>zip</type>
+    </dependency>
+    <dependency>
+      <groupId>org.jbehave.site</groupId>
+      <artifactId>jbehave-site-resources</artifactId>
+      <version>${jbehave.site.version}</version>
+      <type>zip</type>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -115,6 +128,13 @@
         <artifactId>jbehave-maven-plugin</artifactId>
         <version>${jbehave.core.version}</version>
         <executions>
+          <execution>
+            <id>unpack-view-resources</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>unpack-view-resources</goal>
+            </goals>
+          </execution>
           <execution>
             <id>run-stories</id>
             <phase>integration-test</phase>
