--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 
   <properties>
     <jbehave.core.version>3.3</jbehave.core.version>
+    <jbehave.site.version>3.1.1</jbehave.site.version>
     <jbehave.webapp.name>jbehave-web-runner</jbehave.webapp.name>
     <jetty.version>7.2.2.v20101205</jetty.version>
   </properties>
