--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>org.jbehave.web</groupId>
   <artifactId>jbehave-web</artifactId>
-  <version>3.3.2</version>
+  <version>3.4-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>JBehave Web</name>
   <description>JBehave Web provides a web integration layer for Behaviour-Driven Development</description>
