--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jbehave.web</groupId>
     <artifactId>jbehave-web</artifactId>
-    <version>3.3.2</version>
+    <version>3.4-SNAPSHOT</version>
   </parent>
   <artifactId>jbehave-web-selenium</artifactId>
   <packaging>jar</packaging>
