--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jbehave.web</groupId>
     <artifactId>jbehave-web</artifactId>
-    <version>3.4-SNAPSHOT</version>
+    <version>3.3.4</version>
   </parent>
   <artifactId>jbehave-web-distribution</artifactId>
   <packaging>pom</packaging>
