--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -12,13 +12,13 @@
   <dependencies>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium-remote-control</artifactId>
-      <version>2.0rc2</version>
+      <artifactId>selenium-java</artifactId>
+      <version>2.0rc3</version>
     </dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-support</artifactId>
-      <version>2.0rc2</version>
+      <version>2.0rc3</version>
     </dependency>
     <!-- Note: 2.0b1 is the latest release of selenium-android-client in Maven Central
          As it's optional it will not be included in the transitive dependencies
