--- a/web-selenium/pom.xml
+++ b/web-selenium/pom.xml
@@ -13,12 +13,12 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>2.0rc3</version>
+      <version>2.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-support</artifactId>
-      <version>2.0rc3</version>
+      <version>2.0.0</version>
     </dependency>
     <!-- Note: 2.0b1 is the latest release of selenium-android-client in Maven Central
          As it's optional it will not be included in the transitive dependencies
@@ -26,8 +26,8 @@
      -->
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium-android-client</artifactId>
-      <version>2.0b1</version>
+      <artifactId>selenium-android-driver</artifactId>
+      <version>2.0.0</version>
       <optional>true</optional>
     </dependency>
   </dependencies>
